--- a/BankUI/appsettings.json
+++ b/BankUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BankAppJune19;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:bankuikalappdbserver.database.windows.net,1433;Initial Catalog=BankUIkal2App_db;Persist Security Info=False;User ID=kaladmin;Password=P@ssw0rd!!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
